# gpir

./: .gitignore  .gitmodules  README.md  setup.sh
common/: CMakeLists.txt
common/base/: behavior.h  state.h  trajectory.h  type.h
common/cmake/: common.cmake
common/frenet/: CMakeLists.txt  frenet_state.h  frenet_transform.cc  frenet_transform.h  frenet_transform_test.cc
common/geometry/: box2d.cc  box2d.h
common/graph/: dijkstra.hpp  dijkstra_test.cc  test
common/smoothing/: CMakeLists.txt  affine_constraint_test.cc  osqp_spline2d_solver.cc  osqp_spline2d_solver_test.cc  spline1d_constraint_test.cc  spline1d_kernel.cc  spline1d_kernel.h  spline1d_kernel_test.cc  spline2d.cc  spline2d.h  spline2d_constraint_test.cc  spline2d_kernel_test.cc  spline2d_solver.h
common/solver/: CMakeLists.txt
common/utils/: CMakeLists.txt  math.cc  math.h  timer.h
curvature_experiment/: CMakeLists.txt  curvature_benchmark.csv  default.rviz  main.cc  package.xml
curvature_experiment/controller/: lmpc_osqp_solver.cc  lmpc_osqp_solver.h  mpc_controller.cc  mpc_controller.h  osqp_sparse_matrix.h
curvature_experiment/launch/: cur_test.launch  dl_test.launch  no_cur_test.launch  rviz.launch
curvature_experiment/simulator/: car_simulator.cc  car_simulator.h
gp_planner/: CMakeLists.txt  gp_planner.cc  gp_planner.h
gp_planner/benchmark/: CMakeLists.txt  additional_benchmark.cc  curvature_benchmark.cc  vehicle_config.cc  vehicle_config.h
gp_planner/benchmark/DL_IAPS/: CMakeLists.txt  aabox2d.cc  aabox2d.h  box2d.cc  box2d.h  discrete_points_math.cc  discretized_path.cc  discretized_path.h  dl_iaps_test.cc  fem_pos_deviation_ipopt_interface.cc  fem_pos_deviation_ipopt_interface.h  fem_pos_deviation_smoother.cc  fem_pos_deviation_smoother.h  fem_pos_deviation_sqp_osqp_interface.cc  iterative_anchoring_smoother.cc  iterative_anchoring_smoother.h  line_segment2d.cc  line_segment2d.h  linear_interpolation.cc  linear_interpolation.h  math_utils.cc  math_utils.h  polygon2d.cc  polygon2d.h  vec2d.cc
gp_planner/benchmark/DL_IAPS/coarse_trajectory_generator/: grid_search.cc  grid_search.h  hybrid_a_star.cc  hybrid_a_star.h  hybrid_a_star_test.cc  node3d.cc  node3d.h  node3d_test.cc  piecewise_jerk_problem.cc  piecewise_jerk_speed_problem.cc  piecewise_jerk_speed_problem.h  reeds_shepp_path.cc  reeds_shepp_path.h  reeds_shepp_path_test.cc  speed_data.cc  speed_data.h
gp_planner/benchmark/DL_IAPS/proto/: CMakeLists.txt
gp_planner/benchmark/TDR_OBCA/: CMakeLists.txt  distance_approach_interface.h  distance_approach_ipopt_interface.cc  distance_approach_ipopt_interface.h  distance_approach_ipopt_relax_end_interface.cc  distance_approach_ipopt_relax_end_interface.h  distance_approach_problem.cc  distance_approach_problem.h  dual_variable_warm_start_ipopt_interface.cc  dual_variable_warm_start_ipopt_interface.h  dual_variable_warm_start_osqp_interface.cc  dual_variable_warm_start_osqp_interface.h  dual_variable_warm_start_problem.cc  dual_variable_warm_start_problem.h  example_problem_wrapper.cc  file.cc  file.h  interface.cc  interface.h  log.h  tdr_obca_test.cc
gp_planner/benchmark/TDR_OBCA/conf/: planner_open_space_config.pb.txt  testex_mode
gp_planner/benchmark/TDR_OBCA/proto/: CMakeLists.txt  planner_open_space_config.pb.h  planner_open_space_config.proto
gp_planner/cmake/: gp_planner_helper.cmake
gp_planner/data/: analysis.py  overtake_st_plot.py  s-t plot.ipynb  st_graph_plot.py
gp_planner/data1/: block_region_0.csv  block_region_2.csv  block_region_3.csv  block_region_6.csv  st_node_0.csv  st_node_1.csv  st_node_2.csv  st_node_3.csv  st_node_4.csv  st_node_5.csv  st_node_6.csv  st_node_7.csv
gp_planner/examples/: CMakeLists.txt  block_region.csv  bounnder_penalty.cc  curvature_constraint_test.cc  full_test_case.cc  gp_model_test.cc  incremental_planner_test.cc  kappa_gradient_test.cc  min_jerk_test.cc  new_initializer.cc  new_kappa_test.cc  path_decider_test.cc  pure_prior.cc  simple_interpolate_obstacle.cc  simple_interpolate_with_initializer.cc  simple_kappa_test.cc  simple_obstacle.cc  st_graph_test.cc  st_node.csv  st_plot.py
gp_planner/gp/: CMakeLists.txt  gp_incremental_path_planner.cc  gp_incremental_path_planner.h  gp_path_optimizer.cc  gp_path_optimizer.h
gp_planner/initializer/: CMakeLists.txt  gp_initializer.cc  gp_initializer.h  piecewise_jerk_path_problem.cc  piecewise_jerk_path_problem.h  piecewise_jerk_problem.cc  piecewise_jerk_problem.h
gp_planner/scripts/: bound_penaly_test.py  hinge_loss_test.py  overtake_st_plot.py  st_graph_plot.py
gp_planner/sdf/: grid_map_2d.cc  grid_map_2d.h  signed_distance_field_2d.cc  signed_distance_field_2d.h
gp_planner/st_graph/: st_graph.cc  st_graph.h
gp_planner/st_plan/: st_graph.cc  st_graph.h  st_node.cc  st_node.h  st_speed_optimizer.cc  st_speed_optimizer.h
hdmap/: .gitignore  CMakeLists.txt  example.cc  hdmap.cc  hdmap.h  hdmap_impl.cc  hdmap_impl.h
hdmap/pointcloud/: pointcloud_loader.cc  pointcloud_loader.h
hdmap/road_network/: lane.cc  lane.h  lane_map.cc  lane_map.h  road_network.cc  road_network.h
hdmap/routing/: CMakeLists.txt  full_route.cc  full_route.h  routing.cc  routing.h
hdmap/utils/: admap_convertion.cc  admap_convertion.h  admap_visual.cc  admap_visual.h
planning_core/: .gitignore  CMakeLists.txt  eigen_test.cc  planning.cc  planning_core.cc  planning_core.h
planning_core/launch/: carla_controller.launch  carla_setup.launch  (+3 more)
planning_core/simulation/: CMakeLists.txt  simulator_adapter.h  simulator_adapter_factory.cc  simulator_adapter_factory.h
planning_core/simulation/carla/: CMakeLists.txt  carla_adapter.cc  carla_adapter.h  carla_controller.cc  carla_tf.cc
planning_core/simulation/carla/config/: ackermann_pid.yaml  spawn_objects.json
planning_core/simulation/carla/ego_info/: carla_ego_info.cc  carla_ego_info.h
planning_core/simulation/carla/mock_perception/: carla_mock_perception.cc  carla_mock_perception.h
planning_core/simulation/controller/: lmpc_osqp_solver.cc  lmpc_osqp_solver.h  mmpc_controller.cc  mmpc_controller.h  mpc_controller.cc  mpc_controller.h
(+58 files in other folders)
